<resources>
    <string name="app_name">American Footbal Score Keeper</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="extra_point_1">Extra Point(+1)</string>
    <string name="extra_point_2">Extra Point(+2)</string>
    <string name="safety">Safety</string>
    <string name="reset_score">Reset Score</string>
</resources>
